fix: Overflow behaves properly

--- a/frontend/styles/displays/debug-tree.css
+++ b/frontend/styles/displays/debug-tree.css
@@ -69,8 +69,6 @@
 
 /* Container of debug tree */
 .debug-tree-container {
-    height: calc(100vh - 215px);
-    overflow: auto;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
