--- a/frontend/styles/pages/debug-view.css
+++ b/frontend/styles/pages/debug-view.css
@@ -78,6 +78,8 @@
 
     display: flex;
     flex-direction: column;
+    
+    width: 100%;
 }
 
 
