--- a/frontend/styles/pages/tree-view.css
+++ b/frontend/styles/pages/tree-view.css
@@ -6,15 +6,15 @@
     background-color: var(--background-secondary);
 
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+
+    overflow: auto;
 }
 
 .zoom-container {
-    display: flex;
     transform-origin: left top;
-    width: 100%;
-    height: 100%;
-    align-items: flex-start;
-    justify-content: flex-start;
+    width: fit-content;
+    height: fit-content;
+    margin: auto;
 }
 
 .tree-view-page.highlight-debug-session {
